<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_margin"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mortgage_amount"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basic_margin"
            app:layout_constraintTop_toBottomOf="@+id/til_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mortgage_term"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basic_margin"
            app:layout_constraintTop_toBottomOf="@id/til_term"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/interest_rate"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:text="@string/calculate_repayment"
            app:layout_constraintTop_toBottomOf="@id/til_interest"
            android:layout_marginTop="@dimen/basic_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_monthly_payment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_monthly_payment"
            android:layout_marginTop="@dimen/basic_margin"
            app:layout_constraintTop_toBottomOf="@id/btn_calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_monthly_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="@dimen/basic_margin"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/tv_monthly_payment_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_total_payment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_total_payment"
            android:layout_marginTop="@dimen/basic_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_monthly_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_total_repayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="@dimen/basic_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_total_payment_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>